--- a/styles/style-menu.css
+++ b/styles/style-menu.css
@@ -4,12 +4,15 @@
   box-sizing: border-box;
   font-family: sans-serif;
 
+
 }
 
 
 body {
   background-color: rgb(16, 16, 16);
-  background-image: url(/images/975026.jpg);
+  background-image: url(/images/bg3.jpg);
+
+
 
 }
 
