--- a/styles/style-box.css
+++ b/styles/style-box.css
@@ -1,44 +1,127 @@
-.div_opcije {
+.div_box {
   display: flex;
   align-items: center;
   justify-content: center;
   margin-top: 300px;
-  gap: 80px;
-
+  gap: 100px;
   margin-bottom: 200px;
+  flex-wrap: wrap;
+  row-gap: 70px;
+  column-gap: 100px;
+
+
 
 }
 
 
-.box1 {
+
+
+
+
+.box-gaming img {
   width: 350px;
   height: 500px;
   background: rgb(24, 23, 23);
   transition: 0.8s;
-
   background-position: center;
-
+  max-width: 100%;
+  object-fit: cover;
 
 }
 
-.box2 {
+.box-gaming img:hover {
+  transform: scale(1.3);
+}
+
+
+.box-laptop img {
   width: 350px;
   height: 500px;
   background: rgb(24, 23, 23);
   justify-content: center;
   transition: 0.8s;
-  background-image: url(/images/wp7320446.webp);
   background-position: center;
+  max-width: 100%;
+  object-fit: fill;
 
 }
 
-.box1:hover {
+.box-laptop img:hover {
   transform: scale(1.3);
+}
+
+
+.box-monitor img {
+  width: 350px;
+  height: 500px;
+  background: rgb(24, 23, 23);
+  justify-content: center;
+  transition: 0.8s;
+  background-position: center;
+  max-width: 100%;
+  object-fit: cover;
+
 
 
 }
 
-.box2:hover {
+.box-monitor img:hover {
   transform: scale(1.3);
+}
 
+
+
+
+.box-komponente img {
+  width: 350px;
+  height: 400px;
+  background: rgb(24, 23, 23);
+  justify-content: center;
+  transition: 0.8s;
+  background-position: center;
+  max-width: 100%;
+  object-fit: fill;
+  justify-content: center;
+
+
+
+
+}
+
+.box-komponente img:hover {
+  transform: scale(1.3);
+}
+
+
+.box-periferije img {
+  width: 350px;
+  height: 400px;
+  background: rgb(24, 23, 23);
+  justify-content: center;
+  transition: 0.8s;
+  background-position: center;
+  max-width: 100%;
+  object-fit: cover;
+
+}
+
+.box-periferije img:hover {
+  transform: scale(1.3);
+}
+
+
+.box-konzole img {
+  width: 350px;
+  height: 500px;
+  background: rgb(24, 23, 23);
+  justify-content: center;
+  transition: 0.8s;
+  background-position: center;
+  max-width: 100%;
+  object-fit: cover;
+
+}
+
+.box-konzole img:hover {
+  transform: scale(1.3);
 }
