--- a/styles/style-mainbox.css
+++ b/styles/style-mainbox.css
@@ -1,5 +1,6 @@
 .div_slike {
   margin-top: 220px;
+
 }
 
 .pocetne-slike {
@@ -11,6 +12,10 @@
   flex-wrap: wrap;
   align-content: center;
   display: flex;
+  row-gap: 10px;
+  column-gap: 50px;
+
+
 
 }
 
@@ -26,6 +31,8 @@
   cursor: pointer;
 
 
+
+
 }
 
 
@@ -39,6 +46,7 @@
   text-align: center;
 
 
+
 }
 
 
@@ -46,6 +54,7 @@
 .slika:hover {
   cursor: pointer;
   transform: scale(1.2);
+  transition: 0.8s;
 }
 
 /*main pocetne slike*/
