--- a/styles/style-box.css
+++ b/styles/style-box.css
@@ -19,7 +19,7 @@
 
 
 .box-gaming img {
-  width: 350px;
+  width: 500px;
   height: 500px;
   background: rgb(24, 23, 23);
   transition: 0.8s;
@@ -27,22 +27,26 @@
   max-width: 100%;
   object-fit: cover;
 
+
 }
 
 .box-gaming img:hover {
   transform: scale(1.3);
+  opacity: 0.2;
+
+
 }
 
 
 .box-laptop img {
-  width: 350px;
-  height: 500px;
+  width: 500px;
+  height: 400px;
   background: rgb(24, 23, 23);
   justify-content: center;
   transition: 0.8s;
   background-position: center;
   max-width: 100%;
-  object-fit: fill;
+  object-fit: cover;
 
 }
 
@@ -52,8 +56,8 @@
 
 
 .box-monitor img {
-  width: 350px;
-  height: 500px;
+  width: 500px;
+  height: 400px;
   background: rgb(24, 23, 23);
   justify-content: center;
   transition: 0.8s;
@@ -73,14 +77,14 @@
 
 
 .box-komponente img {
-  width: 350px;
+  width: 500px;
   height: 400px;
   background: rgb(24, 23, 23);
   justify-content: center;
   transition: 0.8s;
   background-position: center;
   max-width: 100%;
-  object-fit: fill;
+  object-fit: cover;
   justify-content: center;
 
 
@@ -94,7 +98,7 @@
 
 
 .box-periferije img {
-  width: 350px;
+  width: 500px;
   height: 400px;
   background: rgb(24, 23, 23);
   justify-content: center;
@@ -111,8 +115,8 @@
 
 
 .box-konzole img {
-  width: 350px;
-  height: 500px;
+  width: 500px;
+  height: 400px;
   background: rgb(24, 23, 23);
   justify-content: center;
   transition: 0.8s;
@@ -120,8 +124,22 @@
   max-width: 100%;
   object-fit: cover;
 
+
 }
 
 .box-konzole img:hover {
   transform: scale(1.3);
+}
+
+.text-boxa {
+
+  padding: 3px;
+  box-sizing: border-box;
+  position: relative;
+  color: white;
+
+  width: inherit;
+  text-align: center;
+  font-size: 30px;
+
 }
