--- a/styles/style-menu.css
+++ b/styles/style-menu.css
@@ -7,12 +7,15 @@
 
 
 
+
+
 }
 
 
 body {
   background-color: rgb(16, 16, 16);
-  background-image: url(/images/bg3.jpg);
+  background-image: url(/images/bg3.webp);
+
 
 
 
