--- a/styles/style-product-procesor.css
+++ b/styles/style-product-procesor.css
@@ -1,4 +1,4 @@
-.product-container {
+.product-container-procesor {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,25 +14,25 @@
 
 }
 
-.product-box img {
+.product-box-procesor img {
   width: 400px;
-  height: 450px;
+  height: 370px;
   background: rgb(24, 23, 23);
   transition: 0.8s;
   background-position: center;
   max-width: 100%;
 }
 
-.product-box h2 {
+.product-box-procesor h2 {
   text-align: center;
 }
 
-.product-box p {
+.product-box-procesor p {
   text-align: center;
 
 
 }
 
-.product-box .opcije {
+.product-box-procesor .opcije {
   text-align: center;
 }
