--- a/styles/style-kontakt.css
+++ b/styles/style-kontakt.css
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: black;
+
 
 }
 
@@ -42,7 +42,7 @@ form textarea {
 form button {
   padding: 10px;
   width: 120px;
-  color: black;
+  color: rgb(16, 16, );
   border: none;
   border-radius: 30px;
   outline: none;
