--- a/styles/style-menu.css
+++ b/styles/style-menu.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: sans-serif;
-  border: 1px solid green;
+
 
 
 
@@ -20,7 +20,7 @@
 body {
   background-color: rgb(16, 16, 16);
   background-image: url(/images/bg3.webp);
-
+  box-shadow: 0px 0px 30px 15px rgb(185, 11, 11) inset;
 
 
 
@@ -38,7 +38,7 @@ header {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  box-shadow: 5px 40px 30px 10px rgb(185, 11, 11) inset;
+  background-color: rgb(185, 11, 11);
 }
 
 
