--- a/styles/style-product-mis.css
+++ b/styles/style-product-mis.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 300px;
+  padding-top: 300px;
   gap: 100px;
   margin-bottom: 200px;
   flex-wrap: wrap;
