--- a/styles/style-product-monitor.css
+++ b/styles/style-product-monitor.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 300px;
+  padding-top: 300px;
   gap: 100px;
   margin-bottom: 200px;
   flex-wrap: wrap;
@@ -12,6 +12,11 @@
 
 
 
+}
+
+/*ovako dodajes okolo stranice shadow*/
+body {
+  box-shadow: 0px 0px 30px 15px rgb(185, 11, 11) inset;
 }
 
 .product-box-monitor img {
