--- a/styles/style-kontakt.css
+++ b/styles/style-kontakt.css
@@ -7,7 +7,6 @@
   align-items: center;
   justify-content: center;
 
-
 }
 
 .kontakt-forma {
@@ -16,6 +15,7 @@
   flex-direction: column;
   padding: 80px 100px;
   border-radius: 20px;
+  box-shadow: 0px 0px 30px 15px rgb(140, 83, 231)
 }
 
 form h3 {
