--- a/styles/style-mainbox.css
+++ b/styles/style-mainbox.css
@@ -53,12 +53,22 @@
 
 
 
-.slika:hover {
+
+
+.slika img {
   cursor: pointer;
-  transform: scale(1.2);
+
   transition: 0.8s;
 
 
 }
+
+.slika img:hover {
+  transform: scale(1.2);
+}
+
+
+
+
 
 /*main pocetne slike*/
