--- a/styles/style-menu.css
+++ b/styles/style-menu.css
@@ -17,9 +17,9 @@
 
 
 body {
-  background-color: rgb(16, 16, 16);
-  background-image: url(/images/bg3.webp);
-  box-shadow: 0px 0px 30px 15px rgb(140, 83, 231) inset;
+
+  background-image: url('/images/bg5.jpg');
+  box-shadow: 0px 0px 30px 15px rgb(38, 14, 95) inset;
 
 
 
@@ -38,7 +38,7 @@ header {
   justify-content: space-between;
   align-items: center;
   z-index: 100;
-  background-color: rgb(135, 81, 221);
+  background-color: rgb(38, 14, 95);
 }
 
 
